xml_schema/tests/xml_schema/nistData/list/negativeInteger/Schema+Instance/jaxb/list-negativeinteger-minlength-NISTXML-SV-IV-list-negativeInteger-minLength-1-1.jbx
<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2018, 2020 Oracle and/or its affiliates. All rights reserved.

    This program and the accompanying materials are made available under the
    terms of the Eclipse Public License v. 2.0, which is available at
    http://www.eclipse.org/legal/epl-2.0.

    This Source Code may also be made available under the following Secondary
    Licenses when the conditions for such availability set forth in the
    Eclipse Public License v. 2.0 are satisfied: GNU General Public License,
    version 2 with the GNU Classpath Exception, which is available at
    https://www.gnu.org/software/classpath/license.html.

    SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0

-->

<java version="1.6.0" class="java.beans.XMLDecoder">
 <object class="jakarta.xml.bind.JAXBElement">
  <object class="javax.xml.namespace.QName"> 
   <string>NISTSchema-SV-IV-list-negativeInteger-minLength-1-NS</string> 
   <string>NISTSchema-SV-IV-list-negativeInteger-minLength-1</string> 
  </object> 
  <class>java.util.List</class> 
  <class>jakarta.xml.bind.JAXBElement$GlobalScope</class>
  <object class="java.util.ArrayList"> 
   <void method="add"> 
    <object class="java.math.BigInteger"> 
     <string>-973456422212346343</string> 
    </object> 
   </void> 
   <void method="add"> 
    <object class="java.math.BigInteger"> 
     <string>-971565321644217437</string> 
    </object> 
   </void> 
   <void method="add"> 
    <object class="java.math.BigInteger"> 
     <string>-951366267723865121</string> 
    </object> 
   </void> 
   <void method="add"> 
    <object class="java.math.BigInteger"> 
     <string>-945477536654354577</string> 
    </object> 
   </void> 
   <void method="add"> 
    <object class="java.math.BigInteger"> 
     <string>-917553553582765376</string> 
    </object> 
   </void> 
   <void method="add"> 
    <object class="java.math.BigInteger"> 
     <string>-967763743666855752</string> 
    </object> 
   </void> 
   <void method="add"> 
    <object class="java.math.BigInteger"> 
     <string>-945565772626782647</string> 
    </object> 
   </void> 
  </object> 
 </object> 
</java> 
